Began first draft of read_file/write_file functions

--- a/fast/CMakeLists.txt
+++ b/fast/CMakeLists.txt
@@ -1,13 +1,10 @@
-cmake_minimum_required(VERSION 3.14...3.22)
+cmake_minimum_required(VERSION 3.14...3.30)
 
 set(CMAKE_TOOLCHAIN_FILE "${CMAKE_SOURCE_DIR}/vcpkg/scripts/buildsystems/vcpkg.cmake"
     CACHE STRING "Vcpkg toolchain file")
+
 # ---- Project ----
-project(
-  fast
-  VERSION 0.1.0
-  LANGUAGES CXX
-)
+project(fast VERSION 0.2.0 LANGUAGES CXX)
 
 # ---- Include guards ----
 if(PROJECT_SOURCE_DIR STREQUAL PROJECT_BINARY_DIR)
@@ -17,6 +14,8 @@ if(PROJECT_SOURCE_DIR STREQUAL PROJECT_BINARY_DIR)
   )
 endif()
 
+set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
+
 # ---- Add source files ----
 file(GLOB_RECURSE headers CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/include/*.h")
 file(GLOB_RECURSE sources CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/source/*.cpp")
@@ -24,7 +23,7 @@ file(GLOB_RECURSE sources CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/source/
 # ---- Create library ----
 add_library(${PROJECT_NAME} SHARED ${headers} ${sources})
 set_target_properties(${PROJECT_NAME} PROPERTIES CXX_STANDARD 20)
-target_compile_definitions(${PROJECT_NAME} PUBLIC -DSLEEF_STATIC_LIBS=1)
+target_compile_definitions(${PROJECT_NAME} PUBLIC -DSLEEF_STATIC_LIBS=1 -DLLFIO_HEADERS_ONLY=0 -DLLFIO_STATIC_LINK=1)
 
 # being a cross-platform target, we enforce standards conformance on MSVC
 target_compile_options(${PROJECT_NAME} PUBLIC "$<$<COMPILE_LANG_AND_ID:CXX,MSVC>:/permissive->")
@@ -32,11 +31,20 @@ target_compile_options(${PROJECT_NAME} PUBLIC "$<$<COMPILE_LANG_AND_ID:CXX,MSVC>
 # Dependencies (from vcpkg)
 find_package(scn CONFIG REQUIRED)
 target_link_libraries(${PROJECT_NAME} PRIVATE scn::scn)
+
 find_package(Threads REQUIRED)
 find_package(llfio CONFIG REQUIRED)
 target_link_libraries(${PROJECT_NAME} PUBLIC llfio::sl)
+
 find_package(Poco REQUIRED COMPONENTS Foundation)
 target_link_libraries(${PROJECT_NAME} PRIVATE Poco::Foundation)
+
+if(MSVC)
+set(OpenMP_RUNTIME_MSVC "experimental" FORCE)
+endif()
+find_package(OpenMP REQUIRED)
+target_compile_options(${PROJECT_NAME} PUBLIC ${OpenMP_CXX_FLAGS})
+target_link_libraries(${PROJECT_NAME} PRIVATE OpenMP::OpenMP_CXX)
 # download CPM.cmake
 file(
   DOWNLOAD
@@ -45,6 +53,7 @@ file(
   EXPECTED_HASH SHA256=cc155ce02e7945e7b8967ddfaff0b050e958a723ef7aad3766d368940cb15494
 )
 include(${CMAKE_CURRENT_BINARY_DIR}/cmake/CPM.cmake)
+
 CPMAddPackage(
   NAME sleef
   VERSION 3.6.1
@@ -55,15 +64,16 @@ CPMAddPackage(
     "SLEEF_BUILD_STATIC_TEST_BINS OFF"
     "SLEEF_ENABLE_LTO ON"
     "SLEEF_BUILD_LIBM ON"
-    "SLEEF_BUILD_DFT ON"
-    "SLEEF_BUILD_QUAD ON"
-    "SLEEF_BUILD_GNUABI_LIBS ON"
-    "SLEEF_BUILD_SCALAR_LIB ON"
+    "SLEEF_BUILD_DFT OFF"
+    "SLEEF_BUILD_QUAD OFF"
+    "SLEEF_BUILD_GNUABI_LIBS OFF"
+    "SLEEF_BUILD_SCALAR_LIB OFF"
     "SLEEF_BUILD_TESTS OFF"
     "SLEEF_ENABLE_CXX ON"
 )
 target_include_directories(${PROJECT_NAME} PRIVATE ${sleef_BINARY_DIR}/include)
-target_link_libraries(${PROJECT_NAME} PRIVATE sleef sleefdft sleefquad)
+target_link_libraries(${PROJECT_NAME} PRIVATE sleef)
+
 target_include_directories(
   ${PROJECT_NAME} PUBLIC $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include>
                          $<INSTALL_INTERFACE:include/${PROJECT_NAME}-${PROJECT_VERSION}>
