--- a/fast/CMakeLists.txt
+++ b/fast/CMakeLists.txt
@@ -27,6 +27,8 @@ target_compile_definitions(${PROJECT_NAME} PUBLIC -DSLEEF_STATIC_LIBS=1 -DLLFIO_
 
 # being a cross-platform target, we enforce standards conformance on MSVC
 target_compile_options(${PROJECT_NAME} PUBLIC "$<$<COMPILE_LANG_AND_ID:CXX,MSVC>:/permissive->")
+target_compile_options(${PROJECT_NAME} PUBLIC "$<$<COMPILE_LANG_AND_ID:CXX,MSVC>:/J>")
+target_compile_options(${PROJECT_NAME} PUBLIC "$<$<COMPILE_LANG_AND_ID:CXX,MSVC>:/GF>")
 
 # Dependencies (from vcpkg)
 find_package(scn CONFIG REQUIRED)
