--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -59,13 +59,7 @@ jobs:
         sudo apt-get install -y build-essential tar curl zip unzip
 
     - name: Configure CMake
-      run: |
-        cmake -B ${{ steps.strings.outputs.build-output-dir }}
-        -DCMAKE_CXX_COMPILER=${{ matrix.cpp_compiler }}
-        -DCMAKE_C_COMPILER=${{ matrix.c_compiler }}
-        -DCMAKE_BUILD_TYPE=${{ matrix.build_type }}
-        -S ${{ github.workspace }}/fast
-        ${{ matrix.os == 'windows-latest' && '-DVCPKG_TARGET_TRIPLET=x64-windows-static' || '' }}
+      run: cmake -B ${{ steps.strings.outputs.build-output-dir }} -DCMAKE_CXX_COMPILER=${{ matrix.cpp_compiler }} -DCMAKE_C_COMPILER=${{ matrix.c_compiler }} -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} -S ${{ github.workspace }}/fast ${{ matrix.os == 'windows-latest' && '-DVCPKG_TARGET_TRIPLET=x64-windows-static' || '' }}
 
     - name: Build
       run: cmake --build ${{ steps.strings.outputs.build-output-dir }} --config ${{ matrix.build_type }}
