--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -56,7 +56,12 @@ jobs:
       if: matrix.os == 'ubuntu-latest'
       run: |
         sudo apt-get update
-        sudo apt-get install -y build-essential tar curl zip unzip
+        sudo apt-get install -y build-essential tar curl zip unzip libomp-dev
+
+    - name: Install dependencies for MacOS
+      if: matrix.os == 'macos-latest'
+      run: |
+        brew install libomp
 
     - name: Configure CMake
       run: cmake -B ${{ steps.strings.outputs.build-output-dir }} -DCMAKE_CXX_COMPILER=${{ matrix.cpp_compiler }} -DCMAKE_C_COMPILER=${{ matrix.c_compiler }} -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} -S ${{ github.workspace }}/fast ${{ matrix.os == 'windows-latest' && '-DVCPKG_TARGET_TRIPLET=x64-windows-static' || '' }}
