--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,7 +48,7 @@ jobs:
     - uses: actions/upload-artifact@v4
       with:
         name: fast-binary
-        path: ${{ github.workspace }}/build
+        path: ${{ github.workspace }}
 
     - name: Set reusable strings
       id: strings
