--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -47,7 +47,7 @@ jobs:
 
     - uses: actions/upload-artifact@v4
       with:
-        name: fast-binary
+        name: fast-${{ matrix.os }}-${{ matrix.c_compiler }}-${{ matrix.build_type }}
         path: ${{ github.workspace }}
 
     - name: Set reusable strings
